# excel-tech-radar

./: .env.example  .gitignore  =6.0.0  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  Dockerfile  GITHUB_PAGES_DEPLOYMENT.md  INSTALLATION_FIX_PLAN.md  PHASE3_UNIFIED_INTERFACE.md  PRODUCTION_READINESS.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  REQUIREMENTS_SPEC.md  STANDALONE_GUIDE.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  config.yml  create_sample_data.py  create_template.py  create_test_data.py  docker-compose.yml  excel-radar.spec  pyproject.toml  requirements-dev.txt  requirements.txt  test_strategic.py  update_propensity_template.py  update_strategic_template.py  update_template.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
bob-docs/: API.md  DEPLOYMENT.md  PACKAGING.md
config/: README.md  development.yml  production.yml
data/: Swisscom Bedag Stadt-ZRH.xlsx  Swisscom Bedag Stadt-ZRH.xlsx.bak  Test.xlsx  horizon_cadence_transformed.xlsx  horizon_cadence_transformed.xlsx.bak  radar.xlsx  radar.xlsx.bak  radar_template-2.xlsx  radar_template-2.xlsx.bak  radar_template-4.xlsx  radar_template-4.xlsx.deleted  radar_template-5.xlsx.deleted  radar_template.xlsx  radar_template.xlsx.bak  radar_template.xlsx.deleted  swisscom-test.xlsx.deleted  swisscom_bedag_stadt zh.xlsx  swisscom_bedag_stadt zh.xlsx.bak  swisscom_bedag_stadt zh.xlsx.deleted  swisscom_bedag_stadt-zh.xlsx  swisscom_bedag_stadt-zh.xlsx.bak  test-1.xlsx  test-1.xlsx.deleted  test-2.xlsx.bak  test-2.xlsx.deleted  test-3.xlsx.deleted  test-4.xlsx.deleted  test.xlsx  test.xlsx.bak  test.xlsx.deleted  test_2.xlsx  test_2.xlsx.deleted  test_3.xlsx.bak  test_3.xlsx.deleted  test_4.xlsx.deleted  test_5.xlsx.deleted  test_dealsize.xlsx  test_dot.xlsx  test_strategic.xlsx  ubp.xlsx
dev/: README.md  create_test_data.py  test_strategic.py  update_propensity_template.py  update_template.py
docs/: app.js  client-mode.js  index.html  style.css
templates/: radar_template.xlsx
test_output/: app.js  index.html  radar.json
tests/: __init__.py  test_sanitize.py  test_validation.py
web/: app.js  index.html  index.html.backup  style.css  style.css.backup  unified.css  unified.html  unified.js
(+17 files in other folders)
