[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-radar"
version = "0.4.4"
description = "Generate interactive Technology/Strategy Radars from Excel files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["radar", "visualization", "excel", "d3", "strategy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "bleach>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
prod = [
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "psutil>=5.9.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
excel-radar = "excel_radar.cli:app"
excel-radar-launcher = "excel_radar.launcher:main"

[project.urls]
Homepage = "https://github.com/yourusername/excel-tech-radar"
Documentation = "https://github.com/yourusername/excel-tech-radar#readme"
Repository = "https://github.com/yourusername/excel-tech-radar"
Issues = "https://github.com/yourusername/excel-tech-radar/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=excel_radar --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true